--- a/autofollow.html
+++ b/autofollow.html
@@ -18,7 +18,7 @@
 
 
     <a href="https://www.linkedin.com/mynetwork/" target="_blank" rel="noopener noreferrer">
-        <p class="btn btn-info    "> <i class="fa-solid fa-user"></i> Auto Follow LinkedIn People You may know list </p>
+        <p class="btn btn-info    "> <i class="fa-solid fa-user"></i> Auto Follow LinkedIn Profile from You may know list </p>
     </a>
 
     <div class="d-grid gap-2 mb-2">
