--- a/autofollow.html
+++ b/autofollow.html
@@ -31,7 +31,7 @@
 
     <div class="d-flex justify-content-center mt-3 ">
         <a href="https://www.buymeacoffee.com/afsalmadathingal/" target="_blank" rel="noopener noreferrer">
-            <p class="btn btn-warning  "> <i class="fa-solid fa-mug-saucer"></i> Support Developer </p>
+            <p class="btn btn-warning  "> <i class="fa-solid fa-mug-saucer"></i> Buy Me a Coffee </p>
         </a>
     </div>
 
